--- a/index.html
+++ b/index.html
@@ -78,51 +78,51 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-content">
-                            <h3>Logiciel de Comptabilité</h3>
-                            <p class="project-tech">Java SE</p>
-                            <p>Une solution robuste pour simplifier la gestion financière. Automatisez, suivez et optimisez vos finances sans effort.</p>
+                            <h3>📝 Cheatsheet en Markdown</h3>
+                            <p class="project-tech">HTML, CSS</p>
+                            <p>Votre guide ultime pour maîtriser Markdown. Ne perdez plus jamais de temps à chercher la bonne syntaxe !</p>
                             <div class="project-links">
-                                <a href="https://github.com/TechNerdSam/BeyahCompta" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
+                                <a href="https://technerdsam.github.io/cheatsheet-en-Markdown/" target="_blank" rel="noopener noreferrer">Consulter le guide</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-content">
-                            <h3>Réseau Social pour Gamers</h3>
-                            <p class="project-tech">HTML/CSS/JS, GSAP, Jakarta EE, Spring Boot</p>
-                            <p>Le hub ultime pour les joueurs. Trouvez des coéquipiers, partagez vos exploits et explorez l'univers du jeu vidéo.</p>
+                            <h3>📊 Rapports Full-Stack 2025</h3>
+                            <p class="project-tech">Analyse, Veille Technologique</p>
+                            <p>Plongez au cœur du développement Full-Stack avec ces rapports détaillés. Une mine d'or pour tout développeur ambitieux.</p>
                             <div class="project-links">
-                                <a href="https://github.com/TechNerdSam/Reseau_social2gamers" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
+                                <a href="https://technerdsam.github.io/rapports-full-stack-2025/" target="_blank" rel="noopener noreferrer">Lire les rapports</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-content">
-                            <h3>Blog de Maths</h3>
-                            <p class="project-tech">HTML, CSS, JavaScript, PHP, MySQL</p>
-                            <p>Un blog interactif dédié aux mathématiques, offrant des articles, des exercices et des explications claires sur divers concepts.</p>
+                            <h3>💡 Méthode SAMYN</h3>
+                            <p class="project-tech">Méthodologie, Résolution de problèmes</p>
+                            <p>Découvrez une approche innovante pour décortiquer et résoudre les problèmes complexes. La simplicité au service de l'efficacité.</p>
                             <div class="project-links">
-                                <a href="https://github.com/TechNerdSam/BlogDeMath" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
+                                <a href="https://technerdsam.github.io/Methode-SAMYN/" target="_blank" rel="noopener noreferrer">Apprendre la méthode</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-content">
-                            <h3>Générateur de mots de passe</h3>
-                            <p class="project-tech">Java</p>
-                            <p>Une application de bureau simple et sécurisée pour générer des mots de passe forts et uniques afin de protéger vos comptes.</p>
+                            <h3>🚀 Tunnel de Conversion</h3>
+                            <p class="project-tech">Marketing Digital, Stratégie</p>
+                            <p>Un framework pour optimiser votre parcours client. Transformez vos visiteurs en clients fidèles grâce à une stratégie éprouvée.</p>
                             <div class="project-links">
-                                <a href="https://github.com/TechNerdSam/GenerateurDeMDP" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
+                                <a href="https://technerdsam.github.io/Tunnel-2-conversion/" target="_blank" rel="noopener noreferrer">Voir le tunnel</a>
                             </div>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-content">
-                            <h3>Horloge Numérique</h3>
-                            <p class="project-tech">Java</p>
-                            <p>Une horloge numérique élégante et personnalisable développée en Java, affichant l'heure avec précision et un design moderne.</p>
+                            <h3>✒️ Site de Poésie</h3>
+                            <p class="project-tech">HTML, CSS, JavaScript</p>
+                            <p>Laissez-vous emporter par la beauté des mots. Un havre de paix numérique pour tous les amoureux de la poésie.</p>
                             <div class="project-links">
-                                <a href="https://github.com/TechNerdSam/HorlogeNumerique" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
+                                <a href="https://technerdsam.github.io/site-2-poesie/" target="_blank" rel="noopener noreferrer">Explorer les vers</a>
                             </div>
                         </div>
                     </div>
