Revamp portfolio page structure and content
Updated the HTML structure and content of the portfolio page, enhancing sections for projects, skills, and contact information.

--- a/index.html
+++ b/index.html
@@ -75,57 +75,123 @@
 
             <section id="projects" class="projects-section">
                 <h2>Mes Projets</h2>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <div class="project-content">
-                            <h3>📝 Cheatsheet en Markdown</h3>
-                            <p class="project-tech">HTML, CSS</p>
-                            <p>Votre guide ultime pour maîtriser Markdown. Ne perdez plus jamais de temps à chercher la bonne syntaxe !</p>
-                            <div class="project-links">
-                                <a href="https://technerdsam.github.io/cheatsheet-en-Markdown/" target="_blank" rel="noopener noreferrer">Consulter le guide</a>
+                <p class="projects-intro">
+                    Une sélection de projets qui démontrent ma passion pour la création de solutions robustes
+                    et d'expériences utilisateur engageantes, allant du backend Java au frontend interactif.
+                </p>
+                <div class="projects-grid-elite">
+
+                    <div class="project-card-elite large">
+                        <div class="project-image-container">
+                            <svg class="project-placeholder-img" width="100%" height="100%" viewBox="0 0 400 300" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="400" height="300" rx="10" fill="#1A192B"/><text x="50%" y="45%" fill="#8e44ad" font-family="Poppins, sans-serif" font-size="24" font-weight="bold" text-anchor="middle">Horloge Futuriste</text><text x="50%" y="60%" fill="#ecf0f1" font-family="Poppins, sans-serif" font-size="14" text-anchor="middle">Java, Swing, AWT</text></svg>
+                        </div>
+                        <div class="project-content-elite">
+                            <h3 class="project-title-elite">Application Horloge Futuriste</h3>
+                            <p class="project-description-elite">Une application de bureau Java (Swing) avec alarmes, chronomètre, et design futuriste personnalisable.</p>
+                            <div class="project-tags">
+                                <span>Java 8+</span>
+                                <span>Swing</span>
+                                <span>AWT</span>
+                                <span>Desktop</span>
+                            </div>
+                            <div class="project-links-elite">
+                                <a href="https://github.com/TechNerdSam/HorlogeNumerique" target="_blank" rel="noopener noreferrer">Voir le Code</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <div class="project-content">
-                            <h3>📊 Rapports Full-Stack 2025</h3>
-                            <p class="project-tech">Analyse, Veille Technologique</p>
-                            <p>Plongez au cœur du développement Full-Stack avec ces rapports détaillés. Une mine d'or pour tout développeur ambitieux.</p>
-                            <div class="project-links">
-                                <a href="https://technerdsam.github.io/rapports-full-stack-2025/" target="_blank" rel="noopener noreferrer">Lire les rapports</a>
+
+                    <div class="project-card-elite">
+                        <div class="project-content-elite">
+                            <span class="project-type">API & Service Web</span>
+                            <h3 class="project-title-elite">Raccourcisseur d'URL</h3>
+                            <p class="project-description-elite">Service back-end complet avec Spring Boot pour créer et gérer des URL courtes via une API RESTful et une interface simple.</p>
+                            <div class="project-tags">
+                                <span>Spring Boot</span>
+                                <span>Java 17</span>
+                                <span>JPA</span>
+                                <span>H2</span>
+                                <span>GSAP</span>
+                            </div>
+                            <div class="project-links-elite">
+                                <a href="https://github.com/TechNerdSam/urlshortener" target="_blank" rel="noopener noreferrer">Voir le Code</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <div class="project-content">
-                            <h3>💡 Méthode SAMYN</h3>
-                            <p class="project-tech">Méthodologie, Résolution de problèmes</p>
-                            <p>Découvrez une approche innovante pour décortiquer et résoudre les problèmes complexes. La simplicité au service de l'efficacité.</p>
-                            <div class="project-links">
-                                <a href="https://technerdsam.github.io/Methode-SAMYN/" target="_blank" rel="noopener noreferrer">Apprendre la méthode</a>
+
+                    <div class="project-card-elite">
+                        <div class="project-content-elite">
+                            <span class="project-type">Application Web</span>
+                            <h3 class="project-title-elite">Landing Page "ApexSolutions"</h3>
+                            <p class="project-description-elite">Landing page dynamique pour une entreprise, servie par Spring Boot avec un moteur de template Thymeleaf.</p>
+                            <div class="project-tags">
+                                <span>Spring Boot</span>
+                                <span>Thymeleaf</span>
+                                <span>Java 17</span>
+                                <span>MVC</span>
+                            </div>
+                            <div class="project-links-elite">
+                                <a href="https://github.com/TechNerdSam/ApexSolutions" target="_blank" rel="noopener noreferrer">Voir le Code</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <div class="project-content">
-                            <h3>🚀 Tunnel de Conversion</h3>
-                            <p class="project-tech">Marketing Digital, Stratégie</p>
-                            <p>Un framework pour optimiser votre parcours client. Transformez vos visiteurs en clients fidèles grâce à une stratégie éprouvée.</p>
-                            <div class="project-links">
-                                <a href="https://technerdsam.github.io/Tunnel-2-conversion/" target="_blank" rel="noopener noreferrer">Voir le tunnel</a>
+
+                    <div class="project-card-elite large">
+                        <div class="project-image-container">
+                             <svg class="project-placeholder-img" width="100%" height="100%" viewBox="0 0 400 300" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="400" height="300" rx="10" fill="#1A192B"/><text x="50%" y="45%" fill="#3498db" font-family="Poppins, sans-serif" font-size="24" font-weight="bold" text-anchor="middle">CV Interactif</text><text x="50%" y="60%" fill="#ecf0f1" font-family="Poppins, sans-serif" font-size="14" text-anchor="middle">Tailwind CSS, Vanilla JS</text></svg>
+                        </div>
+                        <div class="project-content-elite">
+                            <h3 class="project-title-elite">CV Interactif (Bento Grid)</h3>
+                            <p class="project-description-elite">Mon CV personnel en ligne, conçu avec un design "Bento Grid" moderne, des effets interactifs et une esthétique épurée.</p>
+                            <div class="project-tags">
+                                <span>HTML5</span>
+                                <span>Tailwind CSS</span>
+                                <span>JavaScript</span>
+                                <span>AOS</span>
+                            </div>
+                            <div class="project-links-elite">
+                                <a href="https://github.com/TechNerdSam/monCV-en-ligne" target="_blank" rel="noopener noreferrer">Voir le Code</a>
+                                <a href="https://technerdsam.github.io/monCV-en-ligne/" target="_blank" rel="noopener noreferrer" class="link-secondary">Voir le Site</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project-card">
-                        <div class="project-content">
-                            <h3>✒️ Site de Poésie</h3>
-                            <p class="project-tech">HTML, CSS, JavaScript</p>
-                            <p>Laissez-vous emporter par la beauté des mots. Un havre de paix numérique pour tous les amoureux de la poésie.</p>
-                            <div class="project-links">
-                                <a href="https://technerdsam.github.io/site-2-poesie/" target="_blank" rel="noopener noreferrer">Explorer les vers</a>
+                    
+                    <div class="project-card-elite">
+                        <div class="project-content-elite">
+                            <span class="project-type">Frontend & IA</span>
+                            <h3 class="project-title-elite">Guide des Rêves en Islam</h3>
+                            <p class="project-description-elite">Un guide interactif avec dictionnaire de symboles et un interprète personnel alimenté par l'IA (Google Gemini).</p>
+                            <div class="project-tags">
+                                <span>HTML5</span>
+                                <span>Tailwind CSS</span>
+                                <span>Google Gemini</span>
+                                <span>Jekyll</span>
+                            </div>
+                            <div class="project-links-elite">
+                                <a href="https://github.com/TechNerdSam/laughing-broccoli" target="_blank" rel="noopener noreferrer">Voir le Code</a>
+                                <a href="https://technerdsam.github.io/laughing-broccoli/" target="_blank" rel="noopener noreferrer" class="link-secondary">Voir le Site</a>
                             </div>
                         </div>
                     </div>
+                    
+                    <div class="project-card-elite">
+                        <div class="project-content-elite">
+                            <span class="project-type">Rapport & Analyse Technique</span>
+                            <h3 class="project-title-elite">Rapport Full-Stack Java 2025</h3>
+                            <p class="project-description-elite">Analyse détaillée et stratégique des opportunités et des défis de la spécialisation Full-Stack dans l'écosystème Java moderne. Présenté sous forme de page web interactive.</p>
+                            <div class="project-tags">
+                                <span>HTML5</span>
+                                <span>CSS3</span>
+                                <span>JavaScript</span>
+                                <span>Analyse</span>
+                                <span>Veille Technologique</span>
+                            </div>
+                            <div class="project-links-elite">
+                                <a href="https://github.com/TechNerdSam/rapports-full-stack-2025" target="_blank" rel="noopener noreferrer">Voir le Code</a>
+                                <a href="https://technerdsam.github.io/rapports-full-stack-2025/" target="_blank" rel="noopener noreferrer" class="link-secondary">Consulter le Rapport</a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
